--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -36,9 +36,9 @@ application/icon=""
 application/file_version=""
 application/product_version=""
 application/company_name=""
-application/product_name=""
+application/product_name="Stories of a Frog"
 application/file_description=""
-application/copyright=""
+application/copyright="Luca Canali"
 application/trademarks=""
 
 [preset.1]
