--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -50,7 +50,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="../../../Desktop/Linux_Platform_test/Platform_test.x86_64"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -266,3 +266,59 @@ permissions/write_sms=false
 permissions/write_social_stream=false
 permissions/write_sync_settings=false
 permissions/write_user_dictionary=false
+
+[preset.3]
+
+name="HTML5"
+platform="HTML5"
+runnable=true
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="../../../Desktop/Platform_test.html"
+patch_list=PoolStringArray(  )
+script_export_mode=1
+script_encryption_key=""
+
+[preset.3.options]
+
+vram_texture_compression/for_desktop=true
+vram_texture_compression/for_mobile=false
+html/custom_html_shell=""
+html/head_include=""
+custom_template/release=""
+custom_template/debug=""
+
+[preset.4]
+
+name="Mac OSX"
+platform="Mac OSX"
+runnable=true
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="../../../Desktop/Mac Platform test/Platform_test.zip"
+patch_list=PoolStringArray(  )
+script_export_mode=1
+script_encryption_key=""
+
+[preset.4.options]
+
+custom_template/debug=""
+custom_template/release=""
+application/name=""
+application/info="Made with Godot Engine"
+application/icon=""
+application/identifier=""
+application/signature=""
+application/short_version="1.0"
+application/version="1.0"
+application/copyright=""
+display/high_res=false
+privacy/camera_usage_description=""
+privacy/microphone_usage_description=""
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=false
